FINSHED EXTERA CREDIT